# auto-research

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: routes_research.py  schemas.py
app/core/: config.py  exceptions.py  logging.py
app/graph/: builder.py  nodes.py  state.py
app/models/: source.py  task.py
app/prompts/: analyst.md  fact_checker.md  planner.md  report_writer.md
app/services/: crawler_service.py  llm_service.py  markdown_cleaner.py  rag_service.py  search_service.py  task_service.py  translation_service.py  vector_store.py
benchmark/: analyst_benchmark.py  benchmark_rag.py  build_golden_set.py  eval_retrieval.py  planner_benchmark.py  planner_errors.md  retriever_benchmark.py  retriever_improvement_report.md  run_benchmark.py  tasks.json  test_analyst.py  test_planner.py  test_rag.py  test_retriever.py  test_tavily_improvements.py
benchmark/GoldenDataset/: improvement_plan.md
docs/: Analyst改进基准测试报告.md  Analyst节点不足与改进方案.docx  PRD.md  Planner改进方案.md  RAG改进方案.md  参考文档.txt  开发任务拆解表.md  开发者上手指南.md  技术架构文档.md  搜索引擎改进方案.md  版本说明_v0.1.4.md  版本说明_v0.1.5.md
tests/: test_api.py  test_graph.py  test_models.py  test_rag.py
ui/: streamlit_app.py
