[project]
name = "deep-research-agent"
version = "0.1.0"
description = "基于 LangGraph、RAG 与 FastAPI 的自动化深度调研系统"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"

[project.scripts]
deepresearch = "app.main:start_cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
